Fix :  controller remove useless method and update doc
